# calendar-reminder

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: SOURCES.md
scripts/: bootstrap_google_token.py  convert_pickle_token.py
src/calendar_slack_bot/: __init__.py  auth.py  calendar_events.py  config.py  daemon_example.py  healthcheck.py  main.py  message_rendering.py  slack_client.py  slack_scheduled.py  state_store.py  sync.py  timer_manager.py
tests/: conftest.py  test_calendar_events.py  test_config.py  test_main_reminders.py  test_message_rendering.py  test_state_store.py  test_sync.py  test_timer_manager.py
