[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "calendar-bot"
version = "1.0.0"
description = "A modular calendar notification bot. Currently supports Google Calendar and Slack."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
